--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,8 @@
 
 body {
   font-family: 'Poppins', sans-serif;
+  width: 100%;
+  height: 100%;
 }
 
 * {
@@ -21,13 +23,7 @@ body {
 
 header {
   background: var(--dark);
-  height: 800px;
-}
-
-.container {
-  padding: 0 15px;
-  max-width: 1152px;
-  margin: 0 auto;
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 70% 87%, 0 100%);
 }
 
 header nav .left a {
@@ -35,10 +31,59 @@ header nav .left a {
   text-decoration: none;
   text-transform: uppercase;
   margin-right: 2rem;
+  -webkit-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
-header nav{
+
+header nav .left a:hover {
+  color: var(--primary);
+}
+
+header nav {
   padding: 2rem 0;
 }
-header nav .branding{
+
+header nav .branding {
   margin-right: 3rem;
+}
+
+.container {
+  padding: 0 15px;
+  max-width: 1152px;
+  margin: 0 auto;
+}
+.hero{
+  padding: 2rem 0;
+}
+.hero .left img{
+  width: 200%;
+}
+.hero .right {
+  color: var(--pure);
+}
+
+.hero .right h6 {
+  color: var(--primary);
+  font-size: 1.6rem;
+  margin-bottom: 0.6rem;
+}
+
+.hero .right h1 {
+  font-size: 4rem;
+  font-weight: 100;
+  line-height: 1.2;
+  margin-bottom: 2rem;
+}
+
+.hero .right h1 span {
+  color: var(--primary);
+}
+
+.hero .right p {
+  line-height: 1.9;
+  margin-bottom: 2rem;
+}
+.hero .right{
+  margin-top: -7rem;
 }
