--- a/css/utilities.css
+++ b/css/utilities.css
@@ -1,9 +1,57 @@
 .flex {
   display: flex;
 }
-.items-center{
+
+.items-center {
   align-items: center;
 }
-.justify-between{
+
+.justify-between {
   justify-content: space-between;
+}
+
+.justify-center {
+  justify-content:
+}
+
+.btn {
+  padding: 0.8rem 3rem;
+  font-size: 1rem;
+  font-weight: 600;
+  border: 2px solid transparent;
+  text-transform: uppercase;
+  outline: none;
+  cursor: pointer;
+}
+
+.btn-primary {
+  background: var(--primary);
+  color: var(--secondary);
+  -webkit-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+.btn-primary:hover {
+  background-color: transparent;
+  border-color: var(--primary);
+  color: var(--primary);
+}
+
+.btn-secondary {
+  background-color: transparent;
+  border-color: var(--primary);
+  color: var(--primary);
+  -webkit-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+.btn-secondary:hover {
+  background-color: var(--primary);
+  color: var(--dark);
+}
+
+.flex-1 {
+  flex: 1;
 }
